helloapp/helloapp/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-app
  namespace: hello-app
  labels:
    app: hello-app
spec:
  ports:
    - name: part-1
      protocol: TCP
      port: 80
      targetPort: 80
    - name: part-2
      protocol: TCP
      port: 8888
      targetPort: 8888
  internalTrafficPolicy: Cluster
  type: ClusterIP
  sessionAffinity: None
  selector:
    app: hello-app
    deployment: hello-app
